# sev

./: .gitignore  .gitmodules  :w  AGENTS.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  loc.sh  vglog
.github/workflows/: deploy-website.yml
demo/: demo-file.scm
resources/: AppIcon.icns  command.scm  init.scm
scheme/: AGENTS.md  CLAUDE.md  built-in.scm  command.scm  evil.scm  icon.scm  init.scm  mode.scm  theme.scm
scheme/editor/: built-in.scm  built-in.sld  command.scm  command.sld  evil.scm  evil.sld  icon.scm  minibuffer.scm  minibuffer.sld  mode.scm  mode.sld  theme.scm  theme.sld  vim.sld  which-key.scm  which-key.sld
scheme/editor/evil/: core.scm  macro.scm  motion.scm  operator.scm  text-object.scm  undo.scm  visual.scm
scheme/editor/theme/: catppuccin.scm  solarized.scm
scheme/editor/vim/: core.scm  macro.scm  motion.scm  operator.scm  text-object.scm  undo.scm  visual.scm
src/: cursor_flash.h  event.c  file_scanner.c  file_scanner.h  init.c  iterate.c  keyboard.c  keyboard.h  keyevent.h  keymap.c  keymap.h  quit.c  state.h  state_io.c  state_io.h  theme.h
src/clay/: CLAUDE.md  clay.h  init.c  init.h  renderer.c  renderer.h
src/command/: CLAUDE.md  README.md  keyboard.c  keyboard.h  keymap.c  keymap.h  macro.c  message.c  message.h  minibuf.c  minibuf.h  mode.c  mode.h  scheme.c  scheme.h  scheme_bindings.h  scheme_internal.h
src/display/: AGENTS.md  CLAUDE.md  README.md  buf_render.c  buf_render.h  cursor.c  cursor.h  decoration.c  decoration.h  icon.c  icon.h  keybinding.c  keybinding.h  layout.c  layout.h  major_mode_info.c  major_mode_info.h  message.c  message.h  minibuf.c  minibuf.h  mode_icon.c  mode_icon.h  pane.c  pane.h  scale.c  scale.h  search.c  search.h  splash.c  splash.h  status.c  status.h  tab.c  tab.h  text_surface.c  text_surface.h  theme.c  theme.h  tooltip.c  (+7 more)
src/layout/: cursor.c  cursor.h  layout.c  message.c  mode_icon.c  mode_icon.h  pane.c  pane.h  scale.h  status.c  status.h  tab.c  tab.h  theme.c  theme.h  vline.c  vline.h
src/platform/: dpi.c  dpi.h  macos.h  macos.m
src/scheme/: scheme.c
src/subeditor/: buffer.c  buffer.h  gap.c  gap.h  line.c  line.h  location.h  mark.h  message.c  message.h  mode.c  mode.h  var.c  var.h
src/text/: CLAUDE.md  README.md  buffer.c  buffer.h  buffer_edit.c  buffer_type.h  change.c  change.h  diff.c  diff.h  gap.c  jump_list.c  jump_list.h  line.c  line.h  mark.c  mark.h  message.c  mode.c  mode.h  point.c  register.c  register.h  search.c  search.h  treesitter.c  treesitter.h  utf8.h  var.c
src/wasm/: pre.js
test/: README.md  scheme_test_init.c  scheme_test_init.h  test_dead_keystroke.c  test_scheme_vim_motion.c  test_stubs.c  test_stubs.h
test/scheme/: helpers.scm  main.scm  main.scm.bak
test/scheme/vim/: core-test.scm  macro-test.scm  motion-test.scm  operator-test.scm  text-object-test.scm  undo-test.scm  visual-test.scm
website/: astro.config.mjs  bun.lockb  package.json
website/public/demo/: Sev.html  Sev.js  Sev.wasm  app.data  app.html  app.js  app.wasm
website/src/components/: About.astro  Community.astro  Demo.astro  Hackable.astro  Hero.astro  IconRows.astro  Portable.astro
website/src/layouts/: Base.astro
website/src/pages/: index.astro
website/src/styles/: global.css
